--- a/views/form.ejs
+++ b/views/form.ejs
@@ -1,3 +1,8 @@
-<form>
-    <h1>HEllo world!</h1>
+<form action="/" method="POST" enctype="multipart/form-data">
+    <label for="fileName">File Name: </label>
+    <input type="text" name="fileName" id="fileName">
+
+    <input type="file" name="file" id="file">
+
+    <input type="submit" value="upload">
 </form>
