--- a/views/form.ejs
+++ b/views/form.ejs
@@ -1,6 +1,5 @@
-<form action="/" method="POST" enctype="multipart/form-data">
-    <label for="fileName">File Name: </label>
-    <input type="text" name="fileName" id="fileName">
+<form action="/upload" method="POST" enctype="multipart/form-data">
+  
 
     <input type="file" name="file" id="file">
 
