--- a/views/form.ejs
+++ b/views/form.ejs
@@ -1,6 +1,8 @@
 <form action="/upload" method="POST" enctype="multipart/form-data">
   
-
+    <label for="name">name: </label>
+    <input type="text" name="name" id="name"> 
+    
     <input type="file" name="file" id="file">
 
     <input type="submit" value="upload">
