--- a/views/files.ejs
+++ b/views/files.ejs
@@ -2,7 +2,15 @@
 
 <ul>
     <%if(files) {%>
-        
+        <%files.forEach(file=>{%>
+            <li>
+                <p>name: </p> <span><%=file.filename%></span>
+                <p>url: </p> <span><%=file.url%></span>
+                <p>size: </p> <span><%=file.size%></span>
+                <p>type: </p> <span><%=file.type%></span>
+                <p>date: </p> <small><%=file.date%></small>
+            </li>
+        <%})%>
     <%} else {%>
         <h3>No files yet!!!</h3>
     <%}%>
