feat: add folderId to req.queries

--- a/views/form.ejs
+++ b/views/form.ejs
@@ -5,5 +5,6 @@
     
     <input type="file" name="file" id="file">
 
+    <input type="hidden" name="folderId" value="<%=folderId%>">
     <input type="submit" value="upload">
 </form>
