feat: add upload file button

--- a/views/files.ejs
+++ b/views/files.ejs
@@ -14,6 +14,7 @@
 
 <div>
     <button id="createFolderBtn">Create Folder</button>
+    <a href="/upload<%=currentFolderId!==null?'?folderId='+currentFolderId:''%>"</a><button>Upload File</button></a>
 </div>
 
 
