--- a/views/files.ejs
+++ b/views/files.ejs
@@ -26,6 +26,7 @@
                 <div class="item-buttons">
                     <button onclick="openFolder(<%=folder.folder_id%>)">Open</button>
                     <button onclick="editFolder(<%=folder.folder_id%>, '<%=folder.name%>')">Edit</button>
+                    <button onclick="deleteFolder(<%=folder.folder_id%>)">Delete</button>
                 </div>
             </li>
         <%})%>
@@ -83,5 +84,23 @@
                 }
             });
         }
+    }
+    // delete folder function
+    function deleteFolder(folderId) {
+        if(confirm('Are you sure you want to delete this folder? AND ALL OF ITS CONTENT?')) {
+            fetch(`/folders/${folderId}/delete`,{
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/x-www-form-urlencoded',
+                },
+            }).then(response=>{
+                if (response.ok) {
+                    window.location.reload();
+                } else {
+                        console.error('Failed to delete folder: ',response)
+                        alert('Failed to delete folder.')
+                    }
+            })
+        }   
     }
 </script>
