--- a/views/files.ejs
+++ b/views/files.ejs
@@ -35,6 +35,23 @@
     <%}%>
 </div>
 
+<h2>Files</h2>
+<div class="fileList">
+    <%if(files&&files.length>0) {%>
+        <%files.forEach(file=>{%>
+            <li class="file-item">
+                <span class="item-name"><%=file.filename%></span>
+                <div class="item-buttons">
+                    <a href="<%=file.url.replace('/upload/','/upload/fl_attachment/') %>" target="_blank"><button>Download</button></a>
+                    <button onclick="deleteFile(<%=file.file_id%>)">Delete</button>
+                </div>
+            </li>
+        <%})%>
+    <%} else {%>
+        <p>No file here.</p>
+    <%}%>
+</div>
+
 
 <script>
     document.getElementById("createFolderBtn").addEventListener('click',()=>{
@@ -103,4 +120,24 @@
             })
         }   
     }
+    // delete file function
+    function deleteFile(fileId) {
+        if(confirm('Are you sure you want to delete this file?')) {
+            fetch(`/files/${fileId}/delete`,{
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/x-www-form-urlencoded',
+                },
+            }).then(response=>{
+                if (response.ok) {
+                    window.location.reload();
+                } else {
+                        alert('Failed to delete file.');
+                        console.error('Failed to delete file:', response);
+                    }
+            })
+            // window.location.reload();
+        } //if
+    }
+
 </script>
