feat: add passwrod confirmation

--- a/views/signUp.ejs
+++ b/views/signUp.ejs
@@ -5,6 +5,9 @@
     <label for="password">password: </label>
     <input type="password" name="password" id="password" required />
 
+    <label for="confirm-pass">Confirm pass: </label>
+    <input type="password" name="confirm-pass" id="confirm-pass" required />
+
     <input type="submit" value="Sign-Up" />
 </form>
 <%if(errorMsgs.error && errorMsgs.error.length>0) {%>
