fix: convert types error,general errors

--- a/views/form.ejs
+++ b/views/form.ejs
@@ -3,7 +3,7 @@
     <label for="name">name: </label>
     <input type="text" name="name" id="name"> 
     
-    <input type="file" name="file" id="file">
+    <input type="file" name="file" id="file" required>
 
     <input type="hidden" name="folderId" value="<%=folderId%>">
     <input type="submit" value="upload">
