--- a/views/logIn.ejs
+++ b/views/logIn.ejs
@@ -1,17 +1,94 @@
-<form action="/log-in" method="POST">
-    <label for="username">username: </label>
-    <input type="text" id="username" name="username" required />
 
-    <label for="password">password: </label>
-    <input type="password" id="password" name="password" required />
 
-    <input type="submit" value="log-in" />
-</form>
-
-<%if(errorMsgs.error && errorMsgs.error.length>0) {%>
-    <div class="error-messages">
-        <%errorMsgs.error.forEach(err=>{%>
-            <p><%=err%></p>
-        <%})%>
+<div class="relative flex size-full min-h-screen flex-col bg-[#111418] dark group/design-root overflow-x-hidden"
+    style="--checkbox-tick-svg: url('data:image/svg+xml,%3csvg viewBox=%270 0 16 16%27 fill=%27rgb(255,255,255)%27 xmlns=%27http://www.w3.org/2000/svg%27%3e%3cpath d=%27M12.207 4.793a1 1 0 010 1.414l-5 5a1 1 0 01-1.414 0l-2-2a1 1 0 011.414-1.414L6.5 9.086l4.293-4.293a1 1 0 011.414 0z%27/%3e%3c/svg%3e'); font-family: Inter, &quot;Noto Sans&quot;, sans-serif;">
+    <div class="layout-container flex h-full grow flex-col">
+        <header
+            class="flex items-center justify-between whitespace-nowrap border-b border-solid border-b-[#293038] px-10 py-3">
+            <div class="flex items-center gap-4 text-white">
+                <div class="size-4">
+                    <svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M24 4H42V17.3333V30.6667H24V44H6V30.6667V17.3333H24V4Z" fill="currentColor"></path>
+                    </svg>
+                </div>
+                <h2 class="text-white text-lg font-bold leading-tight tracking-[-0.015em]">File Uploader (TOP)</h2>
+            </div>
+            <div class="flex flex-1 justify-end gap-8">
+                <button
+                    class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-xl h-10 px-4 bg-[#293038] text-white text-sm font-bold leading-normal tracking-[0.015em]"
+                    id="singup">
+                    <span class="truncate">Sign up</span>
+                </button>
+                <div class="bg-center bg-no-repeat aspect-square bg-cover rounded-full size-10"
+                    style='background-image: url("https://cdn.usegalileo.ai/sdxl10/01dc889d-ee23-4c4c-b4c2-ec5d5c5b3798.png");'>
+                </div>
+            </div>
+        </header>
+        <div class="px-40 flex flex-1 justify-center py-5">
+            <form action="/log-in" method="POST" id="form-div"
+                class="layout-content-container flex flex-col w-[512px] max-w-[512px] py-5 max-w-[960px] flex-1">
+                <h1 class="text-white text-[22px] font-bold leading-tight tracking-[-0.015em] px-4 text-left pb-3 pt-5">
+                    Welcome Back!</h1>
+                <div class="flex max-w-[480px] flex-wrap items-end gap-4 px-4 py-3">
+                    <label class="flex flex-col min-w-40 flex-1">
+                        <p class="text-white text-base font-medium leading-normal pb-2">Username</p>
+                        <input placeholder="e.g slim shady"
+                            class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-xl text-white focus:outline-0 focus:ring-0 border-none bg-[#293038] focus:border-none h-14 placeholder:text-[#9dabb8] p-4 text-base font-normal leading-normal"
+                            value="" name="username" required />
+                    </label>
+                </div>
+                <div class="flex max-w-[480px] flex-wrap items-end gap-4 px-4 py-3">
+                    <label class="flex flex-col min-w-40 flex-1">
+                        <p class="text-white text-base font-medium leading-normal pb-2">Password</p>
+                        <input placeholder="password"
+                            class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-xl text-white focus:outline-0 focus:ring-0 border-none bg-[#293038] focus:border-none h-14 placeholder:text-[#9dabb8] p-4 text-base font-normal leading-normal"
+                            value="" name="password" required />
+                    </label>
+                </div>
+               
+                <div class="px-4">
+                    <label class="flex gap-x-3 py-3 flex-row">
+                        <input type="checkbox"
+                            class="h-5 w-5 rounded border-[#3c4753] border-2 bg-transparent text-[#1980e6] checked:bg-[#1980e6] checked:border-[#1980e6] checked:bg-[image:--checkbox-tick-svg] focus:ring-0 focus:ring-offset-0 focus:border-[#3c4753] focus:outline-none"
+                            />
+                        <p class="text-white text-base font-normal leading-normal">This is just a silly checkbox</p>
+                    </label>
+                </div>
+                <div class="flex px-4 py-3">
+                    <input
+                        class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-xl h-10 px-4 flex-1 bg-[#1980e6] text-white text-sm font-bold leading-normal tracking-[0.015em]"
+                        type="submit" value="Login">
+                    </input>
+                </div>
+            </form>
+        </div>
+        <footer class="flex justify-center">
+            <div class="flex max-w-[960px] flex-1 flex-col">
+                <p id="nothaveAccount"
+                    class="text-[#9dabb8] text-sm font-normal leading-normal pb-3 pt-1 px-4 text-center underline">
+                    Not have an account? sign up!</p>
+            </div>
+        </footer>
     </div>
-<%}%>
+    <%if(errorMsgs.error && errorMsgs.error.length>0) {%>
+        <div class="error-messages">
+            <%errorMsgs.error.forEach(err=>{%>
+                <p>
+                    <%=err%>
+                </p>
+                <%})%>
+        </div>
+        <%}%>
+</div>
+
+
+<script>
+    document.getElementById('singup').addEventListener('click', () => {
+        window.location.href = '/sign-up'
+    })
+    document.getElementById('nothaveAccount').addEventListener('click', () => {
+        window.location.href = '/sign-up'
+    })
+
+</script>
