fix: login typo

--- a/views/signUp.ejs
+++ b/views/signUp.ejs
@@ -16,7 +16,7 @@
                 <button
                     class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-xl h-10 px-4 bg-[#293038] text-white text-sm font-bold leading-normal tracking-[0.015em]"
                     id="logIn">
-                    <span class="truncate">Log In</span>
+                    <span class="truncate">Login</span>
                 </button>
                 <div class="bg-center bg-no-repeat aspect-square bg-cover rounded-full size-10"
                     style='background-image: url("https://cdn.usegalileo.ai/sdxl10/01dc889d-ee23-4c4c-b4c2-ec5d5c5b3798.png");'>
