style: change cloud svg

--- a/views/form.ejs
+++ b/views/form.ejs
@@ -9,16 +9,9 @@
     >
       <div class="flex items-center gap-4 text-white">
         <div class="size-4">
-          <svg
-            viewBox="0 0 48 48"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              d="M36.7273 44C33.9891 44 31.6043 39.8386 30.3636 33.69C29.123 39.8386 26.7382 44 24 44C21.2618 44 18.877 39.8386 17.6364 33.69C16.3957 39.8386 14.0109 44 11.2727 44C7.25611 44 4 35.0457 4 24C4 12.9543 7.25611 4 11.2727 4C14.0109 4 16.3957 8.16144 17.6364 14.31C18.877 8.16144 21.2618 4 24 4C26.7382 4 29.123 8.16144 30.3636 14.31C31.6043 8.16144 33.9891 4 36.7273 4C40.7439 4 44 12.9543 44 24C44 35.0457 40.7439 44 36.7273 44Z"
-              fill="currentColor"
-            ></path>
-          </svg>
+            <svg viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path d="M19.35 10.04C18.67 6.59 15.64 4 12 4C9.11 4 6.6 5.64 5.35 8.04C2.34 8.36 0 10.91 0 14A6 6 0 0 0 6 20H19A5 5 0 0 0 24 15C23.24 12.42 21.03 10.17 19.35 10.04Z"/>
+              </svg>
         </div>
         <h2
           class="text-white text-lg font-bold leading-tight tracking-[-0.015em]"
