--- a/views/logIn.ejs
+++ b/views/logIn.ejs
@@ -7,10 +7,9 @@
             class="flex items-center justify-between whitespace-nowrap border-b border-solid border-b-[#293038] px-10 py-3">
             <div class="flex items-center gap-4 text-white">
                 <div class="size-4">
-                    <svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path fill-rule="evenodd" clip-rule="evenodd"
-                            d="M24 4H42V17.3333V30.6667H24V44H6V30.6667V17.3333H24V4Z" fill="currentColor"></path>
-                    </svg>
+                    <svg viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M19.35 10.04C18.67 6.59 15.64 4 12 4C9.11 4 6.6 5.64 5.35 8.04C2.34 8.36 0 10.91 0 14A6 6 0 0 0 6 20H19A5 5 0 0 0 24 15C23.24 12.42 21.03 10.17 19.35 10.04Z"/>
+                      </svg>
                 </div>
                 <h2 class="text-white text-lg font-bold leading-tight tracking-[-0.015em]">File Uploader (TOP)</h2>
             </div>
